add proper path, update blog and update styling

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,5 +21,10 @@ h1 {
 
 .blog-date {
   color: gray;
-  font-size: 0.8em;
+  font-size: 0.6rem;
+  margin-bottom: 0.7rem;
+}
+
+.blog-excerpt {
+  font-size: 0.8rem;
 }
