--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,13 +1,14 @@
 .container {
   font-family: "DM Sans";
-  margin: auto;
-  max-width: 500px;
   padding-top: 2rem;
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 2em;
 }
 
 .heading {
-  font-size: 4vw;
-  color: rebeccapurple;
+  font-size: 3rem;
+  color: #333;
   margin: 4rem 0 1rem;
 }
 
