update blog style and files

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,3 +28,38 @@ h1 {
 .blog-excerpt {
   font-size: 0.8rem;
 }
+
+p {
+  margin-bottom: 0.6em;
+}
+
+.footer {
+  color: gray;
+  position: absolute;
+  margin-right: -50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  bottom: 0;
+  font-size: 0.7rem;
+}
+
+.footer a {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.3rem;
+  color: gray;
+}
+
+.footer img {
+  margin-left: 0.6rem;
+}
+
+.text-container {
+  max-width: 60ch;
+}
+
+code {
+  background: rgba(169, 165, 165, 0.05);
+  padding: 0.3em;
+  border-radius: 5px;
+}
